// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select demos > demo: Basic 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px; max-width: 300px;">
  <h4>Basic Select</h4><span class="ant-trigger-wrapper"><div class="ant-select ant-select-single ant-select-show-arrow" tabindex="0"><div class="ant-select-selector"><!-- Multiple mode --><!-- Single mode --><span class="ant-select-selection-search"><input class="ant-select-selection-search-input" readonly="" role="combobox" aria-expanded="false" aria-haspopup="listbox" tabindex="-1" style="opacity: 0; width: 0px; position: absolute;"></span>
  <!--v-if--><span class="ant-select-selection-placeholder">Please select</span>
</div><!-- Clear icon -->
<!--v-if-->
<!-- Arrow / Loading --><span class="ant-select-arrow"><span class="ant-select-arrow-icon"></span></span></div></span>
<!--teleport start-->
<transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!--teleport end-->
<h4>With Allow Clear</h4><span class="ant-trigger-wrapper"><div class="ant-select ant-select-single ant-select-show-arrow ant-select-allow-clear" tabindex="0"><div class="ant-select-selector"><!-- Multiple mode --><!-- Single mode --><span class="ant-select-selection-search"><input class="ant-select-selection-search-input" readonly="" role="combobox" aria-expanded="false" aria-haspopup="listbox" tabindex="-1" style="opacity: 0; width: 0px; position: absolute;"></span><span class="ant-select-selection-item" title="Lucy">Lucy</span>
<!--v-if-->
</div><!-- Clear icon --><span class="ant-select-clear"><span class="ant-select-clear-icon">×</span></span><!-- Arrow / Loading --><span class="ant-select-arrow"><span class="ant-select-arrow-icon"></span></span></div></span>
<!--teleport start-->
<transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!--teleport end-->
</div>"
`;

exports[`Select demos > demo: Multiple 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px; max-width: 400px;">
  <h4>Multiple Select</h4><span class="ant-trigger-wrapper"><div class="ant-select ant-select-multiple ant-select-show-search"><div class="ant-select-selector"><!-- Multiple mode --><!-- Selected tags --><span class="ant-select-selection-item"><span class="ant-select-selection-item-content">Jack</span><span class="ant-select-selection-item-remove"><span class="ant-select-selection-item-remove-icon">×</span></span></span><span class="ant-select-selection-item"><span class="ant-select-selection-item-content">Lucy</span><span class="ant-select-selection-item-remove"><span class="ant-select-selection-item-remove-icon">×</span></span></span><!-- Overflow indicator -->
  <!--v-if-->
  <!-- Search input for multiple --><span class="ant-select-selection-search" style="width: 10px;"><input class="ant-select-selection-search-input" autocomplete="off" role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-autocomplete="list" value=""></span><!-- Placeholder -->
  <!--v-if-->
</div><!-- Clear icon -->
<!--v-if-->
<!-- Arrow / Loading -->
<!--v-if-->
</div></span>
<!--teleport start-->
<transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!--teleport end-->
<h4>Tags Mode</h4><span class="ant-trigger-wrapper"><div class="ant-select ant-select-multiple ant-select-show-search"><div class="ant-select-selector"><!-- Multiple mode --><!-- Selected tags --><!-- Overflow indicator --><!--v-if--><!-- Search input for multiple --><span class="ant-select-selection-search" style="width: 10px;"><input class="ant-select-selection-search-input" autocomplete="off" role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-autocomplete="list" value=""></span><!-- Placeholder --><span class="ant-select-selection-placeholder">Enter tags</span></div><!-- Clear icon -->
<!--v-if-->
<!-- Arrow / Loading -->
<!--v-if-->
</div></span>
<!--teleport start-->
<transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!--teleport end-->
</div>"
`;

exports[`Select demos > demo: Search 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px; max-width: 300px;">
  <h4>Search Select</h4><span class="ant-trigger-wrapper"><div class="ant-select ant-select-single ant-select-show-search ant-select-show-arrow"><div class="ant-select-selector"><!-- Multiple mode --><!-- Single mode --><span class="ant-select-selection-search"><input class="ant-select-selection-search-input" autocomplete="off" role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-autocomplete="list" value=""></span>
  <!--v-if--><span class="ant-select-selection-placeholder">Search and select</span>
</div><!-- Clear icon -->
<!--v-if-->
<!-- Arrow / Loading --><span class="ant-select-arrow"><span class="ant-select-arrow-icon"></span></span></div></span>
<!--teleport start-->
<transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!--teleport end-->
<h4>Option Groups</h4><span class="ant-trigger-wrapper"><div class="ant-select ant-select-single ant-select-show-search ant-select-show-arrow"><div class="ant-select-selector"><!-- Multiple mode --><!-- Single mode --><span class="ant-select-selection-search"><input class="ant-select-selection-search-input" autocomplete="off" role="combobox" aria-expanded="false" aria-haspopup="listbox" aria-autocomplete="list" value=""></span>
<!--v-if--><span class="ant-select-selection-placeholder">Select from groups</span></div><!-- Clear icon -->
<!--v-if-->
<!-- Arrow / Loading --><span class="ant-select-arrow"><span class="ant-select-arrow-icon"></span></span></div></span>
<!--teleport start-->
<transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!--teleport end-->
</div>"
`;

exports[`Select demos > demo: Size 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px; max-width: 300px;"><span class="ant-trigger-wrapper"><div class="ant-select ant-select-single ant-select-show-arrow ant-select-sm" tabindex="0"><div class="ant-select-selector"><!-- Multiple mode --><!-- Single mode --><span class="ant-select-selection-search"><input class="ant-select-selection-search-input" readonly="" role="combobox" aria-expanded="false" aria-haspopup="listbox" tabindex="-1" style="opacity: 0; width: 0px; position: absolute;"></span>
  <!--v-if--><span class="ant-select-selection-placeholder">Small</span>
</div><!-- Clear icon -->
<!--v-if-->
<!-- Arrow / Loading --><span class="ant-select-arrow"><span class="ant-select-arrow-icon"></span></span></div></span>
<!--teleport start-->
<transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!--teleport end--><span class="ant-trigger-wrapper"><div class="ant-select ant-select-single ant-select-show-arrow" tabindex="0"><div class="ant-select-selector"><!-- Multiple mode --><!-- Single mode --><span class="ant-select-selection-search"><input class="ant-select-selection-search-input" readonly="" role="combobox" aria-expanded="false" aria-haspopup="listbox" tabindex="-1" style="opacity: 0; width: 0px; position: absolute;"></span>
<!--v-if--><span class="ant-select-selection-placeholder">Middle (default)</span></div><!-- Clear icon -->
<!--v-if-->
<!-- Arrow / Loading --><span class="ant-select-arrow"><span class="ant-select-arrow-icon"></span></span></div></span>
<!--teleport start-->
<transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!--teleport end--><span class="ant-trigger-wrapper"><div class="ant-select ant-select-single ant-select-show-arrow ant-select-lg" tabindex="0"><div class="ant-select-selector"><!-- Multiple mode --><!-- Single mode --><span class="ant-select-selection-search"><input class="ant-select-selection-search-input" readonly="" role="combobox" aria-expanded="false" aria-haspopup="listbox" tabindex="-1" style="opacity: 0; width: 0px; position: absolute;"></span>
<!--v-if--><span class="ant-select-selection-placeholder">Large</span></div><!-- Clear icon -->
<!--v-if-->
<!-- Arrow / Loading --><span class="ant-select-arrow"><span class="ant-select-arrow-icon"></span></span></div></span>
<!--teleport start-->
<transition-stub name="ant-slide-up" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>
<!--teleport end-->
</div>"
`;
